--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -19,3 +19,8 @@ jobs:
       
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag lidorlg/node-docker-good-defaults:${{ github.run_number }}-${{ github.sha }}
+
+    - name: docker login to registry
+      run : docker login -u ${{ secrets.docker_hub_user }} -p ${{ secrets.docker_hub_pass }}
+
+      
