--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -23,4 +23,7 @@ jobs:
     - name: docker login to registry
       run : docker login -u ${{ secrets.docker_hub_user }} -p ${{ secrets.docker_hub_pass }}
 
+    - name: docker push to registry
+      run: docker push lidorlg/node-docker-good-defaults:${{ github.run_number }}-${{ github.sha }}
+
       
