--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -30,7 +30,7 @@ jobs:
         uses: actions/checkout@v4
         
       - name: check variable value and use it
-        run: echo ${{ DB_CONFIG }}
+        run: echo ${{ vars.DB_CONFIG }}
 
       # Set up BuildKit Docker container builder to be able to build
       # multi-platform images and export cache
