--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -24,13 +24,16 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-
+    environment: dev
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
         
-      - name: check variable value and use it
+      - name: check repo variable value and use it
         run: echo ${{ vars.DB_CONFIG }}
+
+      - name: check env variable value and use it
+        run: echo ${{ vars.DB_ADDRESS }}
 
       # Set up BuildKit Docker container builder to be able to build
       # multi-platform images and export cache
