--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -24,7 +24,7 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-    environment: dev
+    environment: prod
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
